@@ -1,9 +1,12 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.530 2006/01/26 20:14:42 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.531 2006/01/26 20:57:59 rocket Exp $
+
+  26 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh:
+  kmerge should have been kerncache
 
   26 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh,
   targets/support/pre-kmerge.sh:
-  -m Fix a few other places for the kerncache update
+  Fix a few other places for the kerncache update
 
   26 Jan 2006; Eric Edgar <rocket@gentoo.org>
   examples/generic_stage_template.spec, examples/grp_template.spec,
